fixing styling on mobile

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -9,8 +9,8 @@ $bp: (
   // 800px;
   small: 37.5em,
   // 600px;
-  smallest: 23.5em,
-  // 600px;
+  smallest: 23em,
+  // 376px;
 );
 
 @mixin display-grid {
